--- a/client/package.json
+++ b/client/package.json
@@ -10,23 +10,26 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
-		"@sveltejs/adapter-auto": "^3.0.0",
-		"@sveltejs/kit": "^2.0.0",
-		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@sveltejs/adapter-auto": "^3.3.1",
+		"@sveltejs/kit": "^2.7.5",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"autoprefixer": "^10.4.20",
-		"bits-ui": "^0.21.16",
+		"bits-ui": "^1.0.0-next.44",
 		"clsx": "^2.1.1",
 		"postcss": "^8.4.47",
-		"svelte": "^4.2.7",
-		"svelte-check": "^4.0.0",
+		"svelte": "^5.1.9",
+		"svelte-check": "^4.0.5",
 		"tailwind-merge": "^2.5.4",
 		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.14",
-		"typescript": "^5.0.0",
-		"vite": "^5.0.3"
+		"typescript": "^5.6.3",
+		"vite": "^5.4.10"
 	},
 	"type": "module",
 	"dependencies": {
-		"lucide-svelte": "^0.453.0"
+		"class-variance-authority": "^0.7.0",
+		"lucide-svelte": "^0.454.0",
+		"npm-check-updates": "^17.1.10",
+		"svelte-motion": "^0.12.2"
 	}
 }
