--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,25 @@ pyrightconfig.json
 package
 
 # End of https://www.toptal.com/developers/gitignore/api/svelte,python
+
+node_modules
+
+# Output
+.output
+.vercel
+/.svelte-kit
+/build
+
+# OS
+.DS_Store
+Thumbs.db
+
+# Env
+.env
+.env.*
+!.env.example
+!.env.test
+
+# Vite
+vite.config.js.timestamp-*
+vite.config.ts.timestamp-*
