--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,9 +1,11 @@
 cachetools==5.5.0
 fastapi==0.115.5
 nltk==3.9.1
-pydantic==2.9.2
+protobuf==5.29.0
+pydantic==2.10.2
 PyPDF2==3.0.1
+python-dotenv==1.0.1
+Requests==2.32.3
 spacy==3.8.2
 transformers==4.46.2
-uvicorn==0.32.0
-python-multipart==0.0.5
+uvicorn==0.32.1
