--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -5,6 +5,7 @@ protobuf==5.29.0
 pydantic==2.10.2
 PyPDF2==3.0.1
 python-dotenv==1.0.1
+torch
 Requests==2.32.3
 spacy==3.8.2
 https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0.tar.gz
