--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@sveltejs/adapter-vercel": "^5.5.0",
 		"@types/file-saver": "^2.0.7",
 		"axios": "^1.7.8",
 		"class-variance-authority": "^0.7.0",
@@ -37,6 +38,7 @@
 		"mammoth": "^1.8.0",
 		"mode-watcher": "^0.4.1",
 		"npm-check-updates": "^17.1.10",
-		"svelte-motion": "^0.12.2"
+		"svelte-motion": "^0.12.2",
+		"zod": "^3.23.8"
 	}
 }
